naming convention changes

--- a/notebook/RFC_EvalSet_Demo.ipynb
+++ b/notebook/RFC_EvalSet_Demo.ipynb
@@ -26,9 +26,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-08-28 23:54:14.035917: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F FMA\n",
+      "2023-08-29 14:03:48.712364: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-08-28 23:54:14.544899: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1525] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 30976 MB memory:  -> device: 0, name: Tesla V100-PCIE-32GB, pci bus id: 0000:86:00.0, compute capability: 7.0\n"
+      "2023-08-29 14:04:04.022443: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1525] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 30976 MB memory:  -> device: 0, name: Tesla V100-PCIE-32GB, pci bus id: 0000:d8:00.0, compute capability: 7.0\n"
      ]
     }
    ],
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "testset_identifier = 'SampleEvalSetA'\n",
+    "testset_identifier = 'TestSet1Example'\n",
     "soi_type, interference_sig_type = 'OFDMQPSK', 'CommSignal2'\n",
     "all_sig_mixture = np.load(os.path.join('dataset', f'{testset_identifier}_testmixture_{soi_type}_{interference_sig_type}.npy'))\n",
     "meta_data = np.load(os.path.join('dataset', f'{testset_identifier}_testmixture_{soi_type}_{interference_sig_type}_metadata.npy'))\n",
@@ -412,7 +412,7 @@
     }
    ],
    "source": [
-    "testset_identifier = 'SampleEvalSetA'\n",
+    "testset_identifier = 'TestSet1Example'\n",
     "for soi_type in ['QPSK', 'OFDMQPSK']:\n",
     "    for interference_sig_type in ['EMISignal1', 'CommSignal2', 'CommSignal3', 'CommSignal5G1']:\n",
     "\n",
@@ -444,8 +444,16 @@
     "        plt.xlabel('SINR [dB]')\n",
     "        plt.ylabel('BER')\n",
     "        plt.title(f'BER - {soi_type} + {interference_sig_type}')\n",
-    "        plt.show()\n"
+    "        plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94076687-abda-4841-8852-1a8c5ba83be5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
