--- a/notebook/RFC_QuickStart_Guide.ipynb
+++ b/notebook/RFC_QuickStart_Guide.ipynb
@@ -118,7 +118,7 @@
     "\n",
     "generate_soi, demod_soi = get_soi_generation_fn(soi_type)\n",
     "\n",
-    "with h5py.File(os.path.join('dataset', 'train_frame', interference_sig_type+'_raw_data.h5'),'r') as data_h5file:\n",
+    "with h5py.File(os.path.join('dataset', 'interferenceset_frame', interference_sig_type+'_raw_data.h5'),'r') as data_h5file:\n",
     "    sig_data = np.array(data_h5file.get('dataset'))\n",
     "    sig_type_info = data_h5file.get('sig_type')[()]\n",
     "    if isinstance(sig_type_info, bytes):\n",
@@ -203,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "testset_identifier = 'TestSet1A'\n",
+    "testset_identifier = 'TestSet1Mixture'\n",
     "all_sig_mixture = np.load(os.path.join('dataset', f'{testset_identifier}_testmixture_{soi_type}_{interference_sig_type}.npy'))\n",
     "meta_data = np.load(os.path.join('dataset', f'{testset_identifier}_testmixture_{soi_type}_{interference_sig_type}_metadata.npy'))"
    ]
