--- a/notebook/RFC_EvalSet_Demo.ipynb
+++ b/notebook/RFC_EvalSet_Demo.ipynb
@@ -50,7 +50,7 @@
     "soi_type, interference_sig_type = 'OFDMQPSK', 'CommSignal2'\n",
     "all_sig_mixture = np.load(os.path.join('dataset', f'{testset_identifier}_testmixture_{soi_type}_{interference_sig_type}.npy'))\n",
     "meta_data = np.load(os.path.join('dataset', f'{testset_identifier}_testmixture_{soi_type}_{interference_sig_type}_metadata.npy'))\n",
-    "# For SampleEvalSet\n",
+    "# For TestSet1Example\n",
     "all_sig_mixture_groundtruth, all_sig1, all_bits1 = pickle.load(open(os.path.join('dataset', f'GroundTruth_{testset_identifier}_Dataset_{soi_type}_{interference_sig_type}.pkl'), 'rb'))"
    ]
   },
@@ -171,7 +171,7 @@
    "id": "477b69d5-4a2d-4927-84e4-e8dde01acce0",
    "metadata": {},
    "source": [
-    "### Baseline Curves with SampleEvalSetA"
+    "### Baseline Curves with TestSet1Example"
    ]
   },
   {
